--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ header {
     background-color: #3498db;
     color: #fff;
     text-align: center;
-    padding: 40px 0;
+    padding: 30px 0;
 }
 
 h1 {
@@ -40,4 +40,19 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
+}
+
+.border {
+    border-width: 1px;
+}
+
+.border-black {
+    --tw-bg-opacity: 1;
+    border-color: rgb(0, 0, 0 / var(--tw-bg-opacity));
+}
+
+
+
+.rounded-full {
+    border-radius: 9999px;
 }
